#########################
# Project and Packaging #
#########################
[project]
name = "modem-info"
dynamic = ["version"]
description = "Get detailed information and statistics from your cable modem."
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ryan Kozak", email = "ReK42@users.noreply.github.com"},
]
maintainers = [
    {name = "Ryan Kozak", email = "ReK42@users.noreply.github.com"},
]
keywords = ["modem", "docsis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click == 8.1.8",
    "httpx == 0.28.1",
    "rich == 13.7.1",
    "pydantic == 2.11.9",
    "pydantic-extra-types == 2.10.5",
    "pandas == 2.3.2",
    "plotly == 5.23.0",
    "eval_type_backport == 0.2.0; python_version < '3.10'"
]

[project.urls]
Repository = "https://github.com/ReK42/modem-info"
Issues = "https://github.com/ReK42/modem-info/issues"

[project.scripts]
modem-info = "modem_info.__main__:main"

[project.optional-dependencies]
test = [
    "black == 24.8.0",
    "ruff == 0.13.0",
    "mypy == 1.18.1",
    "pandas-stubs == 2.2.2.240807"
]
build = [
    "setuptools == 72.1.0",
    "setuptools-scm == 8.1.0",
    "build == 1.3.0",
    "twine == 5.1.1"
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modem_info = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/modem_info/_version.py"
tag_regex = '^(?:[\w-]+[-/])?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'
fallback_version = "0.0.1.dev1"

###########################
# Development Environment #
###########################
[tool.black]
line_length = 120

[tool.isort]
profile = "black"

[tool.mypy]
cache_dir = ".cache/mypy"
pretty = true
files = "src"

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
cache-dir = ".cache/ruff"
output-format = "full"
src = ["src"]
exclude = ["src/modem_info/_version.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C408",     # Allow dict/list/tuple literals
    "CPY",      # flake8-copyright
    "FIX",      # Allow TODO/FIXME
    "D203",     # Use D211 instead
    "D212",     # Use D213 instead
    "I001",     # Use black instead
    "TD002",    # TODO tags don't require an author
    "TD003",    # TODO tags don't require an issue link
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"src/modem_info/__init__.py" = ["D104"]
"src/modem_info/plot.py" = ["ERA001"]

[tool.ruff.lint.mccabe]
max-complexity = 15
