#########################
# Project and Packaging #
#########################
[project]
name = "modem-info"
dynamic = ["version"]
description = "Get detailed information and statistics from your cable modem."
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ryan Kozak", email = "ReK42@users.noreply.github.com"},
]
maintainers = [
    {name = "Ryan Kozak", email = "ReK42@users.noreply.github.com"},
]
keywords = ["modem", "docsis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click == 8.2.1",
    "httpx == 0.28.1",
    "rich == 14.1.0",
    "pydantic == 2.11.9",
    "pydantic-extra-types == 2.10.5",
    "pandas == 2.3.2",
    "plotly == 5.23.0",
]

[project.urls]
Repository = "https://github.com/ReK42/modem-info"
Issues = "https://github.com/ReK42/modem-info/issues"

[project.scripts]
modem-info = "modem_info.__main__:main"

[project.optional-dependencies]
test = [
    "ruff == 0.13.0",
    "mypy == 1.18.1",
    "pandas-stubs == 2.3.2.250827"
]
build = [
    "setuptools == 80.9.0",
    "setuptools-scm == 9.2.0",
    "build == 1.3.0",
    "twine == 6.2.0"
]

[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modem_info = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/modem_info/_version.py"
tag_regex = '^(?:[\w-]+[-/])?(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$'

###########################
# Development Environment #
###########################
[tool.mypy]
cache_dir = ".cache/mypy"
pretty = true
files = "src"

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
cache-dir = ".cache/ruff"
src = ["src"]
exclude = ["_version.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",      # flake8-copyright
    "FIX",      # flake8-fixme

    "C408",     # unnecessary-collection-call
    "D203",     # one-blank-line-before-class (use D211 instead)
    "D212",     # multi-line-summary-first-line (use D213 instead)
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link

    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # indent-with-spaces
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E402",     # module-import-not-at-top-of-file
    "F401",     # unused-import
]
"src/modem_info/plot.py" = [
    "ERA001",   # commented-out-code
]
